# krunner-lastpass

./: .gitmodules  CMakeLists.txt  install.sh  krunner-lastpass.desktop  lastpass.c  lastpass.h  main.cpp  main.h  plasma-lpass.desktop
